test_outputs/connlist/ipblockstest_explain_output.txt
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-9.255.255.255 => kube-system/calico-node-tier[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-9.255.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-9.255.255.255 => kube-system/ibm-keepalived-watcher[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-9.255.255.255 => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-9.255.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-9.255.255.255 => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-9.255.255.255 => kube-system/vpn-858f6d9777[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 10.0.0.0-10.255.255.255 => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 10.0.0.0-10.255.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 10.0.0.0-10.255.255.255 => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 10.0.0.0-10.255.255.255 => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 10.0.0.0-10.255.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 10.0.0.0-10.255.255.255 => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 10.0.0.0-10.255.255.255 => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 11.0.0.0-172.20.255.255 => kube-system/calico-node-tier[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 11.0.0.0-172.20.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 11.0.0.0-172.20.255.255 => kube-system/ibm-keepalived-watcher[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 11.0.0.0-172.20.255.255 => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 11.0.0.0-172.20.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 11.0.0.0-172.20.255.255 => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 11.0.0.0-172.20.255.255 => kube-system/vpn-858f6d9777[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.21.0.0-172.21.255.255 => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.21.0.0-172.21.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.21.0.0-172.21.255.255 => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.21.0.0-172.21.255.255 => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.21.0.0-172.21.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.21.0.0-172.21.255.255 => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.21.0.0-172.21.255.255 => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.22.0.0-172.29.255.255 => kube-system/calico-node-tier[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.22.0.0-172.29.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.22.0.0-172.29.255.255 => kube-system/ibm-keepalived-watcher[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.22.0.0-172.29.255.255 => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.22.0.0-172.29.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.22.0.0-172.29.255.255 => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.22.0.0-172.29.255.255 => kube-system/vpn-858f6d9777[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.30.0.0-172.30.255.255 => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.30.0.0-172.30.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.30.0.0-172.30.255.255 => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.30.0.0-172.30.255.255 => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.30.0.0-172.30.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.30.0.0-172.30.255.255 => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.30.0.0-172.30.255.255 => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.31.0.0-255.255.255.255 => kube-system/calico-node-tier[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.31.0.0-255.255.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.31.0.0-255.255.255.255 => kube-system/ibm-keepalived-watcher[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.31.0.0-255.255.255.255 => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.31.0.0-255.255.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.31.0.0-255.255.255.255 => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 172.31.0.0-255.255.255.255 => kube-system/vpn-858f6d9777[ReplicaSet]:

ALLOWED UDP:[53] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1

DENIED UDP:[1-52,54-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,TCP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-agent[DaemonSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-agent[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-agent[DaemonSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-agent[DaemonSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-agent[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-agent[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-agent[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-analyzer[DaemonSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-analyzer[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-analyzer[DaemonSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-analyzer[DaemonSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-analyzer[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-analyzer[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents-analyzer[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents[DaemonSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents[DaemonSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents[DaemonSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-agents[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node-tier[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node-tier[DaemonSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node-tier[DaemonSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node-tier[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node-tier[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node-tier[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node[DaemonSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node[DaemonSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node[DaemonSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/calico-node[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/vpn-858f6d9777[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/calico-node-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/ibm-keepalived-watcher[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] kube-system/enable-from-ipblock-to-isolated-by-tier // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
The following nodes are connected due to the system default (Allow all):
0.0.0.0-9.255.255.255 => default/cognetive-agents-agent[DaemonSet]
0.0.0.0-9.255.255.255 => default/cognetive-agents-analyzer[DaemonSet]
0.0.0.0-9.255.255.255 => default/cognetive-agents[DaemonSet]
0.0.0.0-9.255.255.255 => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
0.0.0.0-9.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
0.0.0.0-9.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
0.0.0.0-9.255.255.255 => kube-system/calico-node[DaemonSet]
0.0.0.0-9.255.255.255 => kube-system/heapster-7df8cb8c66[ReplicaSet]
0.0.0.0-9.255.255.255 => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
0.0.0.0-9.255.255.255 => kube-system/ibm-kube-fluentd[DaemonSet]
10.0.0.0-10.255.255.255 => default/cognetive-agents-agent[DaemonSet]
10.0.0.0-10.255.255.255 => default/cognetive-agents-analyzer[DaemonSet]
10.0.0.0-10.255.255.255 => default/cognetive-agents[DaemonSet]
10.0.0.0-10.255.255.255 => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
10.0.0.0-10.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
10.0.0.0-10.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
10.0.0.0-10.255.255.255 => kube-system/calico-node[DaemonSet]
10.0.0.0-10.255.255.255 => kube-system/heapster-7df8cb8c66[ReplicaSet]
10.0.0.0-10.255.255.255 => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
10.0.0.0-10.255.255.255 => kube-system/ibm-kube-fluentd[DaemonSet]
11.0.0.0-172.20.255.255 => default/cognetive-agents-agent[DaemonSet]
11.0.0.0-172.20.255.255 => default/cognetive-agents-analyzer[DaemonSet]
11.0.0.0-172.20.255.255 => default/cognetive-agents[DaemonSet]
11.0.0.0-172.20.255.255 => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
11.0.0.0-172.20.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
11.0.0.0-172.20.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
11.0.0.0-172.20.255.255 => kube-system/calico-node[DaemonSet]
11.0.0.0-172.20.255.255 => kube-system/heapster-7df8cb8c66[ReplicaSet]
11.0.0.0-172.20.255.255 => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
11.0.0.0-172.20.255.255 => kube-system/ibm-kube-fluentd[DaemonSet]
172.21.0.0-172.21.255.255 => default/cognetive-agents-agent[DaemonSet]
172.21.0.0-172.21.255.255 => default/cognetive-agents-analyzer[DaemonSet]
172.21.0.0-172.21.255.255 => default/cognetive-agents[DaemonSet]
172.21.0.0-172.21.255.255 => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
172.21.0.0-172.21.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
172.21.0.0-172.21.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
172.21.0.0-172.21.255.255 => kube-system/calico-node[DaemonSet]
172.21.0.0-172.21.255.255 => kube-system/heapster-7df8cb8c66[ReplicaSet]
172.21.0.0-172.21.255.255 => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
172.21.0.0-172.21.255.255 => kube-system/ibm-kube-fluentd[DaemonSet]
172.22.0.0-172.29.255.255 => default/cognetive-agents-agent[DaemonSet]
172.22.0.0-172.29.255.255 => default/cognetive-agents-analyzer[DaemonSet]
172.22.0.0-172.29.255.255 => default/cognetive-agents[DaemonSet]
172.22.0.0-172.29.255.255 => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
172.22.0.0-172.29.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
172.22.0.0-172.29.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
172.22.0.0-172.29.255.255 => kube-system/calico-node[DaemonSet]
172.22.0.0-172.29.255.255 => kube-system/heapster-7df8cb8c66[ReplicaSet]
172.22.0.0-172.29.255.255 => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
172.22.0.0-172.29.255.255 => kube-system/ibm-kube-fluentd[DaemonSet]
172.30.0.0-172.30.255.255 => default/cognetive-agents-agent[DaemonSet]
172.30.0.0-172.30.255.255 => default/cognetive-agents-analyzer[DaemonSet]
172.30.0.0-172.30.255.255 => default/cognetive-agents[DaemonSet]
172.30.0.0-172.30.255.255 => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
172.30.0.0-172.30.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
172.30.0.0-172.30.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
172.30.0.0-172.30.255.255 => kube-system/calico-node[DaemonSet]
172.30.0.0-172.30.255.255 => kube-system/heapster-7df8cb8c66[ReplicaSet]
172.30.0.0-172.30.255.255 => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
172.30.0.0-172.30.255.255 => kube-system/ibm-kube-fluentd[DaemonSet]
172.31.0.0-255.255.255.255 => default/cognetive-agents-agent[DaemonSet]
172.31.0.0-255.255.255.255 => default/cognetive-agents-analyzer[DaemonSet]
172.31.0.0-255.255.255.255 => default/cognetive-agents[DaemonSet]
172.31.0.0-255.255.255.255 => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
172.31.0.0-255.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
172.31.0.0-255.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
172.31.0.0-255.255.255.255 => kube-system/calico-node[DaemonSet]
172.31.0.0-255.255.255.255 => kube-system/heapster-7df8cb8c66[ReplicaSet]
172.31.0.0-255.255.255.255 => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
172.31.0.0-255.255.255.255 => kube-system/ibm-kube-fluentd[DaemonSet]
default/cognetive-agents-agent[DaemonSet] => 0.0.0.0-255.255.255.255
default/cognetive-agents-agent[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet]
default/cognetive-agents-agent[DaemonSet] => default/cognetive-agents[DaemonSet]
default/cognetive-agents-agent[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => kube-system/calico-node[DaemonSet]
default/cognetive-agents-agent[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
default/cognetive-agents-agent[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
default/cognetive-agents-agent[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet]
default/cognetive-agents-analyzer[DaemonSet] => 0.0.0.0-255.255.255.255
default/cognetive-agents-analyzer[DaemonSet] => default/cognetive-agents-agent[DaemonSet]
default/cognetive-agents-analyzer[DaemonSet] => default/cognetive-agents[DaemonSet]
default/cognetive-agents-analyzer[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system/calico-node[DaemonSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
default/cognetive-agents-analyzer[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet]
default/cognetive-agents[DaemonSet] => 0.0.0.0-255.255.255.255
default/cognetive-agents[DaemonSet] => default/cognetive-agents-agent[DaemonSet]
default/cognetive-agents[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet]
default/cognetive-agents[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
default/cognetive-agents[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
default/cognetive-agents[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
default/cognetive-agents[DaemonSet] => kube-system/calico-node[DaemonSet]
default/cognetive-agents[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
default/cognetive-agents[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
default/cognetive-agents[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => 0.0.0.0-255.255.255.255
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => default/cognetive-agents[DaemonSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/calico-node[DaemonSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => 0.0.0.0-255.255.255.255
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => default/cognetive-agents[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/calico-node[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => 0.0.0.0-255.255.255.255
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => default/cognetive-agents[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/calico-node[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/calico-node-tier[DaemonSet] => 0.0.0.0-255.255.255.255
kube-system/calico-node-tier[DaemonSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/calico-node-tier[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/calico-node-tier[DaemonSet] => default/cognetive-agents[DaemonSet]
kube-system/calico-node-tier[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => kube-system/calico-node[DaemonSet]
kube-system/calico-node-tier[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/calico-node-tier[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/calico-node-tier[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/calico-node[DaemonSet] => 0.0.0.0-255.255.255.255
kube-system/calico-node[DaemonSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/calico-node[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/calico-node[DaemonSet] => default/cognetive-agents[DaemonSet]
kube-system/calico-node[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/calico-node[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/calico-node[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/calico-node[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/calico-node[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/calico-node[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => 0.0.0.0-255.255.255.255
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => default/cognetive-agents[DaemonSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/calico-node[DaemonSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => 0.0.0.0-255.255.255.255
kube-system/ibm-keepalived-watcher[DaemonSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => default/cognetive-agents[DaemonSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/calico-node[DaemonSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => 0.0.0.0-255.255.255.255
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => default/cognetive-agents[DaemonSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/calico-node[DaemonSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/ibm-kube-fluentd[DaemonSet] => 0.0.0.0-255.255.255.255
kube-system/ibm-kube-fluentd[DaemonSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/ibm-kube-fluentd[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/ibm-kube-fluentd[DaemonSet] => default/cognetive-agents[DaemonSet]
kube-system/ibm-kube-fluentd[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/calico-node[DaemonSet]
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
kube-system/vpn-858f6d9777[ReplicaSet] => 0.0.0.0-255.255.255.255
kube-system/vpn-858f6d9777[ReplicaSet] => default/cognetive-agents-agent[DaemonSet]
kube-system/vpn-858f6d9777[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet]
kube-system/vpn-858f6d9777[ReplicaSet] => default/cognetive-agents[DaemonSet]
kube-system/vpn-858f6d9777[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/calico-node[DaemonSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet]
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet]
